--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -31,24 +31,35 @@
 .blue-button {
     background-color: var(--clr-accent2);
 }
-.footer-button {
+.clear-button {
     /* background-color: #080707; */
     background-color: inherit;
     border: 1px solid var(--clr-body2);
     justify-content: center;
-    padding: 1rem 1.6rem;
-    font-size: 1.2rem;
+
     transform: scale(0.85);
     margin-left:-6px;
     cursor: pointer;
 }
 
-
-
-/* .footer-button::before {
-    transform: scale(0.98);
-} */
-
-.red-button:hover, .blue-button:hover, .footer-button:hover {
+.red-button:hover, .blue-button:hover, .clear-button:hover, .footer-button:hover {
     transform: scale(0.88);
 }
+
+.footer-button {
+    padding: 1rem 1.6rem;
+    font-size: 1.2rem;
+    transform: scale(0.85);
+} 
+
+/*Home page*/
+.about-button {
+    border: 1px solid var(--clr-accent);
+    color: var(--clr-accent);
+    font-size: 1.4rem;
+    padding: 1.2rem 2.8rem;
+    /* font-weight: 600; */
+}
+
+
+
