--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -86,7 +86,7 @@
     right: 9.6rem;
     top: 50%; /* Adjust this value to control the overlap */
     transform: translateY(-50%); /* Center the image vertically */
-    max-width: 619px;
+    /* max-width: 619px; */
     width: 50%;
     z-index: -1; /* Ensure this is below the cards */
     /* opacity: 0.8; */
@@ -126,7 +126,120 @@
     z-index: 1; /* Position below the cards but above the background */
 }
 
-/* Media query to adjust layout for smaller screens */
+
+/* ABOUT US*/
+.about__container {
+    display: grid;
+    /* align-items: flex-end; */
+    /* margin-right: 0; */
+    width: 100%;
+}
+
+.about__image-container img {
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+}
+
+.about__text {
+    margin-bottom: 4.8rem;
+}
+
+/* Feature section */
+.section__feature {
+    color: #fff;
+    background: linear-gradient(60deg, #CB3939 55%, #093394 45%);
+    position: relative;
+    width: 100vw; /* Set width to be 100% of the viewport width */
+    max-width: 100vw; /* Ensure it does not exceed the viewport width */
+    /* margin-left: calc(-50vw + 50%);  */
+    left: 50%;
+    transform: translateX(-50%); /* Ensure it is centered properly */
+    z-index: -1;
+    margin-top: -15%;
+}
+
+.feature__container {
+    column-gap: 20%;
+}
+
+
+.feature-text__container, .feature-text, .feature-icon {
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
+}
+
+.feature-text__container {
+    gap: 6rem;
+}
+.feature-icon__container {
+    gap: 3rem;
+}
+
+
+.feature-icon__container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+    justify-content: center;
+    
+}
+.feature-text__container {
+    align-items: flex-end;
+    margin-left: 26%;
+}
+
+
+
+.feature-text, .feature-icon {
+    align-items: center;
+    gap: 2rem;
+}
+/* .feature-text {
+    margin-left: 10%
+} */
+
+.feature-text p {
+    font-weight: 500;
+}
+
+.feature-text-bold {
+    font-size: 4.0rem;
+    font-weight: var(--fw-bold);
+}
+
+.feature-icon img {
+    max-width: 51px;
+    width: 100%;
+    height: auto;
+}
+.feature-icon:nth-of-type(2) img {
+    max-height: 60px;
+    height: 100%;
+    width: auto;
+    margin-left: 8px;
+}
+
+
+.feature-icon {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    /* margin-left: 10%; */
+    gap: 2rem;
+}
+
+.feature-icon p {
+    font-size: 3.0rem;
+    font-weight: var(--fw-bold);
+    margin: 0; /* Reset default margin */
+    padding: 0; /* Reset default padding if necessary */
+}
+
+
+
+
 @media (max-width: 1200px) {
     .card__container {
         width: auto; /* Allow the cards to adjust based on available space */
@@ -139,7 +252,57 @@
         top: 50%;
         transform: translateY(-50%);
     }
+    
+    .about__image-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .about__container, .feature__container {
+        grid-template-columns: 1fr;
+    }
+
+    .feature-text__container {
+        flex-wrap: wrap;
+    }
+
+    .benefits__container::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: auto;
+        bottom: 0; /* Ensures the element starts at the bottom */
+        height: 40%; /* Adjust if you want to change the height */
+        width: 45%; /* One-third of the container width */
+        background: linear-gradient(10deg, #CB3939 50%, #093394 50%);
+        z-index: -5;
+    }
+
+    /* Ensure the .benefits__container has a relative positioning to anchor its ::after pseudo-element */
+    .benefits__container {
+        position: relative;
+    }
+    
+    .section__feature {
+        margin-top: 0%;
+    }
 }
+
+@media (max-width: 600px) {
+    .benefits__container::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: auto;
+        bottom: 0; /* Ensures the element starts at the bottom */
+        height: 20%; /* Adjust if you want to change the height */
+        width: 45%; /* One-third of the container width */
+        background: linear-gradient(10deg, #CB3939 50%, #093394 50%);
+        z-index: -5;
+    }
+    
+}
+
 
 /* Additional adjustments for responsiveness and layout */
 @media (max-width: 1200px) {
