--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,5 +1,5 @@
 /*Gallery carousel slideshow */
-.gallery {
+.section__gallery {
     width: 100%;
 }
 
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: flex-end;
     gap: 2rem;
-    height: 600px;
+    height: 200px;
     max-width: 90%;
     position: relative;
     margin-left: 50%;
@@ -33,14 +33,15 @@
     position: absolute;
     max-height: 610px;
     /* min-height: 250px; */
-    height: 100%;
+    /* height: 100%; */
     width: auto;
+    width: 946px;
     z-index: 0;
-    border-radius: 12px;
+    border-radius: 4px;
     /* margin-left: 50%; */
     justify-content: center;
     /* opacity: 0; */
-    transition: opacity 0.6s ease-in-out;
+    /* transition: opacity 0.6s ease-in-out; */
 }
 
 
@@ -58,7 +59,7 @@
 
 .gallery__item-1 {
     /* left: 15%; */
-    left: 1%;
+    left: 0%;
     /* opacity: .4; */
     /* transform: translateX(-50%); */
     /* transform: scale(0.80); */
@@ -84,7 +85,7 @@
 
 .gallery__item-5 {
     /* left: 85%; */
-    left: 99%;
+    left: 100%;
     /* opacity: .4; */
     /* transform: translateX(-50%); */
     /* transform: scale(0.80); */
@@ -94,6 +95,7 @@
     display: flex;
     justify-content: center;
     margin: 2.5rem 0;
+    margin-top: 12rem;
     height: 10rem;
 }
 
