--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,24 +3,47 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 100vw;
+    max-width: 100%;
     position: relative; /* Position relative to allow absolute positioned pseudo-element */
     overflow: hidden; /* Ensure the pseudo-element's part outside the container is hidden */
 }
+
+/* .benefits__container {
+    position: relative; 
+    width: 100vw;
+    max-width: 100%;
+    overflow: hidden;
+} */
+
 /* Red+Blue backgound slope 1/3*/
 .benefits__container::after {
     content: "";
     position: absolute;
     right: 0;
+    /* left: 0; */
     top: 0;
     bottom: 0;
-    width: 33.33%; /* One-third of the container width */
+    width: 33%; /* One-third of the container width */
+    max-width: 33%;
     background: linear-gradient(10deg, #CB3939 50%, #093394 50%); /* Adjusted to 10deg for a 20-degree slant from the vertical */
     z-index: -5;
     /* margin-right: -10%; */
     /* z-index: 0; */
     /* opacity: 0.25; */
 }
+
+/* .benefits__container::after {
+    content: "";
+    position: absolute;
+    left: 66%; 
+    max-width: 100vw;
+    top: 0;
+    bottom: 0;
+    right: 0; 
+    background: linear-gradient(10deg, #CB3939 50%, #093394 50%);
+    z-index: -5;
+} */
 
 /* New styling for the content container */
 .content__container {
@@ -214,6 +237,7 @@
     width: 100%;
     height: auto;
 }
+
 .feature-icon:nth-of-type(2) img {
     max-height: 60px;
     height: 100%;
@@ -237,7 +261,47 @@
     padding: 0; /* Reset default padding if necessary */
 }
 
+/* SECTION SERVICE */
 
+.service__container h1{
+    text-align: center;
+}
+
+.service__content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4.8rem;
+    margin-top: 4.8rem;
+}
+
+.service__card:nth-child(2) {
+    background-color: var(--clr-accent2);
+    color: #fff;
+}
+
+.service__card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 6px;
+    padding: 3.8rem;
+    gap: 2rem;
+    box-shadow: 0 4px 4px 6px rgba(0,0,0,0.1);
+    max-width: 367px;
+    width: 100%;
+    height: auto;
+}
+
+.service__card h3 {
+    font-weight: var(--fw-bold);
+    text-transform: uppercase;
+}
+
+.service__card img {
+    max-width: 38px;
+    width: 100%;
+    height: auto; /* Keeps aspect ratio */
+}
 
 
 @media (max-width: 1200px) {
@@ -287,6 +351,8 @@
         margin-top: 0%;
     }
 }
+
+
 
 @media (max-width: 600px) {
     .benefits__container::after {
