--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -26,6 +26,7 @@ ul {
     background-color: #070808;
     padding-top: 7rem;
     padding-bottom: 2rem;
+    width: 100vw;
 }
 
 .logo-footer img {
