--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -102,7 +102,7 @@
 }
   
   .slider-scrollbar:hover .scrollbar-track {
-    height: 4px;
+    height: 0.4rem;
   }
   
   .slider-scrollbar .scrollbar-thumb {
@@ -110,7 +110,7 @@
     background: #000;
     top: 0;
     bottom: 0;
-    width: 50%;
+    width: 10%;
     height: 100%;
     cursor: grab;
     border-radius: inherit;
@@ -118,7 +118,7 @@
   
   .slider-scrollbar .scrollbar-thumb:active {
     cursor: grabbing;
-    height: 8px;
+    height: 0.6rem;
     top: -2px;
   }
   
