--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -173,8 +173,8 @@
     color: #fff;
     background: linear-gradient(60deg, #CB3939 55%, #093394 45%);
     position: relative;
-    width: 100vw; /* Set width to be 100% of the viewport width */
-    max-width: 100vw; /* Ensure it does not exceed the viewport width */
+    width: 105vw; /* Set width to be 100% of the viewport width */
+    max-width: 105vw; /* Ensure it does not exceed the viewport width */
     /* margin-left: calc(-50vw + 50%);  */
     left: 50%;
     transform: translateX(-50%); /* Ensure it is centered properly */
@@ -423,6 +423,10 @@
     .faq__container > * {
         flex-basis: 100%; /* Allow each child to take up the full container width */
     }
+
+    /* .testimonial__container {
+        flex-wrap: wrap;
+    } */
 }
 
 
@@ -472,6 +476,10 @@
     .section__feature {
         margin-top: 0%;
     }
+
+    .testimonial__content {
+        flex-wrap: wrap;
+    }
 }
 
 
@@ -489,6 +497,10 @@
         z-index: -5;
     }
     
+
+    .testimonial__card {
+        flex-wrap: wrap;
+    }
 }
 
 
