--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -26,7 +26,8 @@ ul {
     background-color: #070808;
     padding-top: 7rem;
     padding-bottom: 2rem;
-    width: 100vw;
+    width:105vw;
+    max-width: 105vw;
 }
 
 .logo-footer img {
