--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -111,7 +111,8 @@
   
   .slider-scrollbar .scrollbar-thumb {
     position: absolute;
-    background: var(--clr-accent);
+    background: var(--clr-accent2);
+    background: #111;
     top: 0;
     bottom: 0;
     width: 10%;
