--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -413,6 +413,20 @@
     font-size: 1.68rem;
 }
 
+/* VIDEO */
+.video__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.iframe {
+    width: 100%;
+    max-width: 100rem;
+    height: 56.25rem; 
+    /* border-radius: 16px; */
+}
+
 /* Media query for smaller screens */
 @media (max-width: 1000px) { /* Adjust this value based on your needs */
     .faq__container {
