edits to slider timer and feature section centering. 11/03/2024

--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -111,8 +111,8 @@
   
   .slider-scrollbar .scrollbar-thumb {
     position: absolute;
-    background: var(--clr-accent2);
-    background: #111;
+    background: var(--clr-accent);
+    /* background: #111; */
     top: 0;
     bottom: 0;
     width: 10%;
