--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -170,20 +170,28 @@
 
 /* Feature section */
 .section__feature {
+    display: flex;
     color: #fff;
     background: linear-gradient(60deg, #CB3939 55%, #093394 45%);
     position: relative;
     width: 105vw; /* Set width to be 100% of the viewport width */
     max-width: 105vw; /* Ensure it does not exceed the viewport width */
     /* margin-left: calc(-50vw + 50%);  */
+    /* Ensure it is centered properly */
     left: 50%;
-    transform: translateX(-50%); /* Ensure it is centered properly */
+    transform: translateX(-50%); 
     z-index: -1;
     margin-top: -15%;
+    justify-content: center;
 }
 
 .feature__container {
+    width: 130rem;
     column-gap: 20%;
+
+    /* justify-content: center;
+    margin-left: 40%; */
+    transform: translateX(-7%);
 }
 
 
@@ -262,8 +270,13 @@
 }
 
 /* SECTION SERVICE */
+.service__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
-.service__container h1{
+.service__container h1 {
     text-align: center;
 }
 
@@ -422,6 +435,7 @@
 
 .iframe {
     width: 100%;
+    /* 16:9 RATIO*/
     max-width: 100rem;
     height: 56.25rem; 
     /* border-radius: 16px; */
