--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -438,6 +438,8 @@
     /* 16:9 RATIO*/
     max-width: 100rem;
     height: 56.25rem; 
+    max-width: 130rem;
+    height: 73.125rem; 
     /* border-radius: 16px; */
 }
 
@@ -455,7 +457,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center; /* Center-align the items */
-    gap: 4.8rem;
+    gap: 2.4rem;
     /* width: 100%;  */
     /* Control width to manage inner content alignment */
 }
@@ -468,7 +470,7 @@
     display: flex;
     flex-direction: row; /* Change to column for vertical alignment if necessary */
     align-items: center; /* Align items center for horizontal alignment */
-    justify-content: center; /* Center content vertically if flex-direction is column */
+    justify-content:space-between; /* Center content vertically if flex-direction is column */
     column-gap: 4.8rem;
     row-gap: 2rem;
     /* text-align: center; Center-align the text */
@@ -486,27 +488,44 @@
     flex-direction: row;
     gap: 6.4rem;
     justify-content: space-between;
-    background-color: #093394;
-    /* width: 105vw; */
     color: #fff;
-    /* flex-basis: 50%; */
-    /* flex-wrap: wrap; */
+    margin-top: -7.0rem;
+    position: relative; /* This makes .landlord__card2 a reference for the absolutely positioned pseudo-element */
+}
+
+/* Adding a pseudo-element to create the background effect */
+.landlord__card2::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    left: -50%;
+    width: 150vw;
+    height: 60%; /* This will cover 60% of the height of .landlord__card2 from the bottom */
+    background-color: #093394; /* The blue background color */
+    z-index: -1; /* Ensures the background is behind the content */
+}
+
+.landlord__image, .landlord__subcard {
+    flex-basis: 50%;
+}
+
+.landlord__image img {
+    width: 100%;
+    height: auto;
+}
+
+.landlord__subcard {
+    margin-top: auto; /* Keeps at the bottom, if needed */
+    width: 100%;
+    position: relative; /* Ensure content is above the pseudo-element background */
 }
 
 .landlord__card2 .button {
     margin-left: -6px;
 }
 
-.landlord__subcard {
-    margin-top: auto; /* Pushes the subcard to the bottom */
-    width: 100%; 
-}
-
-.landlord__image img {
-    width: 100%;
-    max-width: 446px;
-    height: auto;
-}
 
 .landlord__card3 {
     display: flex;
@@ -534,9 +553,6 @@
         flex-basis: 100%; /* Allow each child to take up the full container width */
     }
 
-    /* .testimonial__container {
-        flex-wrap: wrap;
-    } */
 }
 
 
@@ -589,6 +605,18 @@
 
     .testimonial__content {
         flex-wrap: wrap;
+    }
+
+    .landlord__card2 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .landlord__image img {
+        justify-content: center;
+        width: 100%;
+        max-width: 446px;
+        height: auto;
     }
 }
 
