--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -54,7 +54,7 @@
     gap: 1.8rem;
     font-size: 0;
     list-style: none;
-    margin-bottom: 30px;
+    margin-bottom: 3.0em;
     overflow-x: auto;
     scrollbar-width: none;
     scroll-snap-type: x mandatory; /* Optional: For smoother scrolling and snap effect */
@@ -74,6 +74,12 @@
     object-fit: cover;
 }
 
+/* .slider-wrapper .image-list .image-item:focus {
+  transform: scale(1.05);
+} */
+
+
+
 /*SCROLLBAR*/
   
   .container .slider-scrollbar {
@@ -81,6 +87,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    /* justify-content: center; */
   }
   
   .slider-scrollbar .scrollbar-track {
@@ -88,6 +95,7 @@
     width: 100%;
     height: 2px;
     display: flex;
+    /* justify-content: center; */
     align-items: center;
     border-radius: 4px;
     position: relative;
@@ -96,6 +104,8 @@
   .slider-scrollbar {
     height: 2.4rem;
     width: 100%;
+    /* width: 80%; */
+    justify-content: center;
     display: flex;
     align-items: center;
     margin-top: 2rem; /* Adds some space between the images and scrollbar */
