--- a/assets/css/testimonial.css
+++ b/assets/css/testimonial.css
@@ -90,17 +90,19 @@
 	padding: 10px !important;
 	border-radius: 50%;
 	font-size: 18px !important;
-	background-color: #222 !important;
+	background-color: #000 !important;
 	color:#fff ;
 	cursor: pointer;
-	transition: 0.4s;
+	transition: 0.15s ease-in-out;
 }
 .owl-nav .owl-prev i:hover,
 .owl-nav .owl-next i:hover {
 	/* background-color: var(--clr-accent2) !important;
 	color: #e9e9e9; */
-    filter: brightness(1.05);
+    background: #222 !important;
+    /* filter: brightness(1.05) !important; */
 }
+
 .owl-dots{
 	margin-top: 15px;
 }
