--- a/assets/css/testimonial.css
+++ b/assets/css/testimonial.css
@@ -49,7 +49,14 @@
     min-height: 100%;
 } */
 
+.testimonial__text h3 {
+    font-size: var(--fs-h2);
+    font-weight: var(--fw-bold);
+}
 
+.testimonial__text h6 {
+    font-size: var(--fs-body);
+}
 
 .testimonial__text p {
     font-size: var(--fs-btn);
@@ -90,7 +97,7 @@
 	padding: 10px !important;
 	border-radius: 50%;
 	font-size: 18px !important;
-	background-color: #000 !important;
+	background-color: #111 !important;
 	color:#fff ;
 	cursor: pointer;
 	transition: 0.15s ease-in-out;
@@ -99,11 +106,11 @@
 .owl-nav .owl-next i:hover {
 	/* background-color: var(--clr-accent2) !important;
 	color: #e9e9e9; */
-    background: #222 !important;
+    background: #404040 !important;
     /* filter: brightness(1.05) !important; */
 }
 
-.owl-dots{
+.owl-dots {
 	margin-top: 15px;
 }
 .owl-dots .owl-dot span {
