--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -21,17 +21,31 @@
     content: "";
     position: absolute;
     right: 0;
-    /* left: 0; */
+    /* left: 66%; */
     top: 0;
     bottom: 0;
-    width: 33%; /* One-third of the container width */
+    width: 33%; 
     max-width: 33%;
+    /* width: 100vw;  */
+    /* max-width: 100vw; */
     background: linear-gradient(10deg, #CB3939 50%, #093394 50%); /* Adjusted to 10deg for a 20-degree slant from the vertical */
     z-index: -5;
     /* margin-right: -10%; */
     /* z-index: 0; */
     /* opacity: 0.25; */
 }
+
+/* .benefits__container::after {
+    content: '';
+    position: absolute;
+    left: 66%;
+    right: 0;
+    bottom: 0;
+    width: 150vw;
+    height: 60%; 
+    background-color: #093394; 
+    z-index: -1; 
+} */
 
 /* .benefits__container::after {
     content: "";
