added form section to home page 12/03/2024

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,12 +6,13 @@
 }
 
 .navbar {
-    position: sticky;
+    position: sticky !important;
     top: 0;
     z-index: 1000; 
     background-color: rgba(0, 0, 0, 0.9); /* Example: semi-transparent black; adjust as needed */
     /* background-color: #080707; */
     opacity: 0.9;
+    position: sticky !important;
 }
 
 
