--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -90,25 +90,23 @@
     /* justify-content: center; */
   }
   
-  .slider-scrollbar .scrollbar-track {
-    background: #ccc;
-    width: 100%;
-    height: 2px;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    border-radius: 4px;
-    position: relative;
-  }
-
   .slider-scrollbar {
     height: 2.4rem;
-    width: 100%;
-    /* width: 80%; */
+    width: 70%; /* Adjusted width to a % of its parent container */
     justify-content: center;
     display: flex;
     align-items: center;
-    margin-top: 2rem; /* Adds some space between the images and scrollbar */
+    margin: 2rem auto 0; /* Centers the scrollbar horizontally and adds space above */
+}
+
+.slider-scrollbar .scrollbar-track {
+    background: #ccc;
+    width: 100%; /* Ensures the track spans the entire width of .slider-scrollbar */
+    height: 2px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    position: relative;
 }
   
   .slider-scrollbar:hover .scrollbar-track {
