--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -37,6 +37,7 @@
 
   /*Font Size*/
   /*Headings & body*/
+  --fs-title: 7rem;
   --fs-h1: 3.6rem;
   --fs-h2: 2.4rem;
   --fs-h3: 2rem;
@@ -161,6 +162,7 @@ html {
 /* Adjust font sizes for screens up to 1000px wide */
 @media (max-width: 1000px) {
   :root {
+      --fs-title: 4.5rem;
       --fs-h1: 2.7rem; /* smaller than 3.6rem */
       --fs-h2: 2rem; /* smaller than 2.4rem */
       --fs-h3: 1.65rem; /* smaller than 2rem */
