--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -629,8 +629,10 @@
 
     .feature-icon__container {
         margin-left: 50%;
-        transform: translateX(-50%);
+        width: 70%;
+        transform: translateX(-36%);
         line-height: 200%;
+        
         
     }
 
@@ -674,7 +676,7 @@
 
 
 /* Additional adjustments for responsiveness and layout */
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
     .content__container {
         flex-direction: column; /* Stack the elements vertically on smaller screens */
         align-items: center; /* Center-align the stacked elements */
