--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -298,8 +298,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 4.8rem;
+    justify-content: space-between;
+    /* gap: 4.8rem; */
     margin-top: 4.8rem;
 }
 
