--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -298,8 +298,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    /* gap: 4.8rem; */
+    justify-content: center;
+    column-gap: 5.4rem;
+    row-gap: 4.8rem;
     margin-top: 4.8rem;
 }
 
